plugins {
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.liquibase.gradle' version '2.2.0'
	id 'application'
	id 'java'
}

group = 'it.andmora.expensesmonitor'
version = '0.11.4'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

// prevent the creation of plain.jar file
tasks.named("jar") {
	enabled = false
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation group: 'org.postgresql', name: 'r2dbc-postgresql', version: '1.0.5.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.5.0'

	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.liquibase:liquibase-core:4.24.0'

	testImplementation 'org.springframework.security:spring-security-test'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'io.r2dbc:r2dbc-h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

application {
	applicationDefaultJvmArgs = [
			"--javaagent:/app/opentelemetry-javaagent.jar",
	]
}
